# dioxus-server-fns

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
src/: main.rs
